feat: update date time format pattern to use constant for consistency